manifests/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ai-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: rajat1004/ai-tasks-worker:8c2a0edbe358ac611f2d92e2f264293500fd9987
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
